Bug 101164 - Drag and drop from bibliography database does not insert any data
Summary: Drag and drop from bibliography database does not insert any data
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:5.3.0 target:5.2.3
Keywords: preBibisect, regression
Depends on:
Blocks: Bibliography
  Show dependency treegraph
 
Reported: 2016-07-27 21:55 UTC by RGB
Modified: 2016-09-22 10:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RGB 2016-07-27 21:55:57 UTC
Steps to reproduce the problem:

1- From a Writer document, Tools → Bibliography database
2- Pick an entry on the database and drag & drop it to a Writer document
3- Select some fields like Author, etc. from the menu that opens

Result: no matter what you choose for "Insert data as" (table, fields or text) no information is actually inserted.

Note that if you Drag & drop from the "Data sources" panel (F4) instead, the fields are inserted without problem. 

The problem was commented here: 
https://ask.libreoffice.org/it/question/74063/riferimento-bibliografico-a-pie-di-pagina-writer/
Comment 1 Thomas Hackert 2016-07-29 13:40:26 UTC
Hello RGB, *,
thanks for reporting this bug :) I can confirm it with
OS: Debian Testing AMD64
LO: Version: 5.1.5.1
Build-ID: 1:5.1.5~rc1-1
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: GL; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group
(Debian's own version)

LO: Version: 5.1.5.2
Build-ID: 7a864d8825610a8c07cfc3bc01dd4fce6a9447e5
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group

and

LO Version: 5.2.0.3
Build-ID: 7dbd85f5a18cfeaf6801c594fc43a5edadc2df0c
CPU-Threads: 4; BS-Version: Linux 4.5; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE.UTF-8)

so setting the status to new.
HTH
Thomas
Comment 2 Alex Thurgood 2016-08-31 09:24:23 UTC
Confirming also on 

Version: 5.2.0.4
Build-ID: 066b007f5ebcc236395c7d282ba488bca6720265
CPU-Threads: 2; BS-Version: Mac OS X 10.11.6; UI-Render: Standard; 
Gebietsschema: de-DE (fr.UTF-8)
Comment 3 Xisco Faulí 2016-09-01 07:50:44 UTC
Issue introduced in range ba70050dc37f82306a8a3c5815372a4b9fff18fc..3ecef8cedb215e49237a11607197edc91639bfcd
Comment 4 Michael Stahl 2016-09-19 10:14:51 UTC
there are 2 bugs here:

1) the content of the database is not inserted
   this broke a long time ago, it works in 3.5.7.2 but 3.6.4 is already broken
   (unfortunately my own 3.6.x builds refuse to start on Fedora 24)

2) if you check the "Insert table heading" then only an empty header is inserted
   in particular clicking the "insert table heading" leaves both
   of the next radio button unchecked - this is fixed quite easily

bibisect range for 1) is bf12ddb08f60aa261f83e1688c5d589a69eea0dd..32b61ed8931acd97e488bc73486244c385a3a974
Comment 5 Michael Stahl 2016-09-19 20:31:31 UTC
oops, i should be more careful when bisecting because i'm doing it wrong:

commit c9af2604214a1bff261ced86343eb32de5f18443
Author:     Italo Vignoli <italo@italovignoli.com>
AuthorDate: Fri Mar 9 15:07:02 2012 +0000

    Resolves: fdo#45033 use LibreOffice references in bibliography


that commit changed the bibliography database itself in LO 3.6,
which previously contained 59 entries but now contains only 20.

the bug is that the index of the row that is being inserted is
~33 larger than the row that was dragged, which means that
with a 59 entry database i see data being inserted, it's just
the wrong data!

so LO 3.5 *also* has the same bug...

was broken in OOo 3.3 already, it worked in OOo 3.2.1
Comment 6 Michael Stahl 2016-09-20 12:34:44 UTC
fixed on master
Comment 7 Commit Notification 2016-09-20 12:34:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=984790f15d935f986fd0f5ed92f6a63c17eace35

tdf#101164 sw: Insert Database Columns dialog: ensure one of ...

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2016-09-20 12:35:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bb0e9dd57e7ca0f346ac1102139edaec4e6b3790

tdf#101164 sw: Insert Database Columns dialog: expect selection

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-09-21 09:33:22 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c7a18b2edcaeca80bac512d3018ed9cae1eb0caf&h=libreoffice-5-2

tdf#101164 sw: Insert Database Columns dialog: ensure one of ...

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-09-22 10:32:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a439e641890d81a6bb960ccc27135c040e3e991&h=libreoffice-5-2

tdf#101164 sw: Insert Database Columns dialog: expect selection

It will be available in 5.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.