tdf#101164 sw: Insert Database Columns dialog: ensure one of ...

... the radio buttons is active by default, in case there's no
configuration to read the state from yet.

Change-Id: If1c0462eb5cb9ea5177f1d5a8953b34fabd0829c